// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row> Structure renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row> Structure renders correctly if children prop is set 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
      },
      undefined,
    ]
  }
>
  Sample text
</View>
`;

exports[`<Row> Structure renders correctly if style prop is set 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
